syntax = "proto3";

package forwardresprpc;
option go_package = "./pkg/forwardresprpc";


service ForwardRespService {
  rpc ForwardRespRPC(ForwardRespRequest) returns (ForwardRespResponse) {}
}

message ForwardRespRequest {
  string Host = 1;
  string StateMachineResponse = 2;
}

message ForwardRespResponse {
  bool ProcessedRequest = 1;
}